--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,17 @@
 body{
     background-color:rgb(244, 217, 221);
+    display: flex;
+    justify-content: center;
 }
 .whole-section {
-    display: flex;
+   display: flex;
+   flex-direction: column;
+    max-width: 80%;
+    margin: 0 auto;
 }
 .products-section {
     text-align: center;
     padding: 2rem;
-    max-width: 70%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -30,13 +34,24 @@ body{
   
   @media (max-width: 1024px) {
     .products {
-      grid-template-columns: repeat(2, 1fr); /* 2 columns for tablets */
+      grid-template-columns: repeat(2, 1fr); 
+    }
+    .products-section{
+      max-width: 70%;
+    }
+    .whole-section{
+      display: flex;
+      flex-direction: row;
     }
   }
   
   @media (max-width: 768px) {
     .products {
-      grid-template-columns: 1fr; /* 1 column for mobile */
+      grid-template-columns: 1fr; 
+    }
+    .whole-section{
+      display: flex;
+      flex-direction: column;
     }
   }
   
@@ -66,9 +81,9 @@ body{
     color: black;
     border: 1px solid black;
     border-radius: 35px;
-    width: 13.2rem;
-    height: 3.6rem;
-    padding: 10px;
+    /* width: 13.2rem; */
+    height: 4rem;
+    padding: 0.5rem 1.5rem; 
     font-size: 1.2rem;
     cursor: pointer;
     display: inline-flex;
@@ -76,6 +91,21 @@ body{
     justify-content: center;
     gap: 0.5rem;
     transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+  }
+
+  
+  @media (max-width: 768px) {
+    .add-to-cart-button {
+      font-size: 1rem; 
+      padding: 0.4rem 1.2rem;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .add-to-cart-button {
+      font-size: 0.8rem;
+      padding: 0.3rem 1rem;
+    }
   }
   
   .add-to-cart:hover {
@@ -112,3 +142,37 @@ body{
     color: rgb(169, 46, 1);
   }
   
+  .cart-section{
+    text-align: center;
+    padding-top: 5rem;
+    padding-left: 2rem;
+    width: 30%;
+  }
+  .cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+    text-align: center;
+    background-color: white;
+    border-radius: 20px;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    width: 30rem;
+    
+  }
+  
+  .cart .cart-icon {
+    font-size: 5rem;
+  }
+.cart-title{
+  color: rgb(169, 46, 1);
+  font-family: Arial;
+}
+  .cart-message {
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    color: rgb(153, 104, 104);
+    font-weight: bold;
+    font-family: Arial;
+  }
